--- a/src/pages/valley2/vvday4.astro
+++ b/src/pages/valley2/vvday4.astro
@@ -1,19 +1,55 @@
 
+---
+import Layout from '../../components/Layout.astro';
+---
 
+<Layout title="TITLE">
+	<main>
+    <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
+    <div id="content">
+      <div class="header">
+        <h1>TITLE</h1>
+        <h2>
+           LEAD-IN
+        </h2>
+      </div>
+<h3>Ride Summary</h3>
+Distance:
+<br>
+Climbing:
+<br>
+Descending:
+<br>
+Difficulty:
+<br>
+<a href=>Link to workout in Strava</a>
+<hr>
+<a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
+<hr>
+<p>
+Slept heavily in the hostel bed knowing it was a long ride today.  Was awake by 7 so got packed up and went for coffee, enjoying another Aztec Mocha from the nearby shop until Irene's cafe opened where I scarfed down some biscuits and gravy and chicken fried steak.  Remembered to grab leftover pizza from the fridge, then was rolling by 9am, a bit later than hoped but about when I expected.
+<p>
+Headed directly east outta Fresno - probably 15 miles of just going east, first on olive and then on Belmont street.  Belmont street's bike lane persisted long past civilization!  But also, it was nicer riding the unknown, urban adjacent route on a Sunday while traffic is light and unhurried.
+<p>
+Had been eyeing the citrus lining the highway but didn't want to trespass to pick any and the stuff on the ground did not look good.  But then I found a u-pick! Tangerine Lady told me just to take whatever I wanted for free, and showed me how to use her loaned scissors to grab the best ones hiding inside the trees.  Yay for hyperlocal friendly fruit!
+<p> 
+I think a lot about numbers while I ride.  Since I'm riding through field after farm field (though the foothills are more open range ranches once the elevation starts to pick up, I am still riding almost entirely to the west of the elevation).  But seeing orchards planted in a perfect grid, or a field furrowed every 2 feet for miles makes me think about big numbers - Thousands of plants per orchard, sometimes more than 100k in just a single plot of land.  And all the irrigation that has allowed this specialized growth.  Wonder what it will look like a couple hundred years after we're gone?  But also what an industry - this area grows year round and the crops are harvested at different times...civilization can be pretty clever in adapting with nature.  Grapes are just done; citrus is just starting, olives and nuts yet to come?
 
-Coffee then breakfast
-Packed up and didn't forget my fridge pizza
-Straight east outta Fresno - nicer on a Sunday
-Tangerine Lady 
-Thousands of plants per orchard, sometimes more than 100k
-Fall grapes from yesterday
-Nuts and olives still to come 
-Flirted with foothills yesterday kissed today
-What does it say on the hillside just south of Reed and Anna dale? (Check Google satellite)
-Fell over in reedley
-Next 40 miles ran together 
-Stopped for leftover pizza at some point
-Surprise mile 80 climb
-Sunset atop the ridge
-Biked into Sandy in the deepening dusk 
-With dinner
+<p>
+Into Fresno, the foothills were barely on the horizon, but today we came right up to them and kissed them.  I like these little hills a lot better than the flat farmland, more interesting to just stare into for sure.
+<p>
+Had lunch in Reedley and while still under the spell of a lunch milkshake, I lost my way and while stopping to consult the map, I tipped over.  My shoe stayed attached to the bike for quite awhile even after I removed my foot from it which was a fun challenge while laying on the sidewalk pinned underneath it.  But:  I did not hurt myself, and the bike tried to call for help (my bike computer notices falls and sends Lassie to get help if there is cell signal, supposedly.  Never tested it so far!)  Added a missing screw back to the shoe and was back to riding soon enough.
+<p>
+The next 40 miles or so kinda ran together...lots of road 26 and ave 328 for many many miles.  Occasional gas stations and just miles of farm and ranchland.
+<p> 
+Stopped and ate my leftover pizza at some point.  It no longer tasted very good but it did power me into town.
+<p>
+Hit a surprise climb at mile 80 when I was already pretty tuckered out.  But then I was rewarded with sunset atop the ridge!
+<p>
+Biked into Linsday in the deepening dusk, found my hotel and a meal, and slept.  Shorter day next but may not have cell signal at the end so you may next hear from me in Bakersfield!
+<p>
+    </div>
+
+</main>
+<center>You can email me:  gently at gmail.com</center>
+</Layout>
