--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -41,9 +41,9 @@ Once I get started, you can read more about the trip in the individual daily jou
 <a href=vvday2>Day 2: Stockton to campground near Livingston</a>
 <br>
 <a href=vvday3>Day 3: Campground to Fresno</a>
-<!--
 <br>
-<a href=vvday4>Day 4 - </a>
+<a href=vvday4>Day 4: Fresno to Lindsay </a>
+<!--
 <br>
 <a href=vvday5>Day 5 - to </a>
 <br>
