--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -43,10 +43,10 @@ Once I get started, you can read more about the trip in the individual daily jou
 <a href=vvday3>Day 3: Campground to Fresno</a>
 <br>
 <a href=vvday4>Day 4: Fresno to Lindsay </a>
+<br>
+<a href=vvday5>Day 5: Lindsay to campground past Earlimart</a>
+<br>
 <!--
-<br>
-<a href=vvday5>Day 5 - to </a>
-<br>
 <a href=vvday6>Day 6 - to </a>
 <br>
 <a href=vvday7>Day 7 - to </a>
