--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -46,8 +46,8 @@ Once I get started, you can read more about the trip in the individual daily jou
 <br>
 <a href=vvday5>Day 5: Lindsay to campground past Earlimart</a>
 <br>
+<a href=vvday6>Day 6: campground to Bakersfield</a>
 <!--
-<a href=vvday6>Day 6 - to </a>
 <br>
 <a href=vvday7>Day 7 - to </a>
 <br>
