--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -10,20 +10,18 @@ import Layout from '../components/Layout.astro';
 
         <h1>South Central California Valley Bike Tour, November 2025</h1>
         <h2>
-           Escaped Portland (again) for a couple weeks of sunny miles 
+           Escaped Portland's grey winter (again) for a week and a half of fairly sunny miles 
         </h2>
       </div>
 <p>
 <h3>Trip Summary</h3>
-<b>Distance: Around 600 miles</b>
+<b>Distance: 510 miles in total</b>
 <br>
-<b>Climbing: Around 12000 feet total</b>
+<b>Climbing: 7551 feet total</b>
 <br>
 <b>Difficulty: medium</b>
 <br>
-<b><a href="https://ridewithgps.com/routes/52891806">Link to proposed route in RidewithGPS</a></b>
-<br>
-<iframe src="https://ridewithgps.com/embeds?type=route&id=52891806&sampleGraph=true" style="width: 1px; min-width: 100%; height: 700px; border: none;" scrolling="no"></iframe>
+<b><a href="https://ridewithgps.com/collections/8152222">Link to full route in RidewithGPS</a></b>
 <br>
 <h3><a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Full photo gallery from this trip</a></h3>
 <br>
@@ -32,9 +30,9 @@ Late last year, I was getting a little cabin fevery during the rainy, cold and d
 <br>
 <h3><a href="https://ridewithgps.com/ambassador_routes/2086-great-central-valley-bicycle-route">The Great Cental Valley Bicycle Route</a></h3>
 <p>
-Since I can easily get to Sacramento by train, I plan to arrive in Sacramento in early November and ride south to Los Angeles.
+Since I can easily get to Sacramento with my bike, by train, I planned to arrive in Sacramento in early November, and ride south towards Los Angeles.  In the end I stopped in Bakersfield to avoid the less-awesome routes and extra climbing, combined with some heavy wind/precip in the forecast and headed home from there.
 <p>
-Once I get started, you can read more about the trip in the individual daily journals linked below, which will also link to my per-day routes on Strava.
+You can read more about the trip in the individual daily journals linked below, which will also link to my per-day routes on Strava in case you want to peek at the route or how fast I was going when I went past your old elemetary school :)
 <p>
 <a href=vvday1>Day 1: Sacramento to Stockton</a>
 <br>
@@ -47,21 +45,7 @@ Once I get started, you can read more about the trip in the individual daily jou
 <a href=vvday5>Day 5: Lindsay to campground past Earlimart</a>
 <br>
 <a href=vvday6>Day 6: campground to Bakersfield</a>
-<!--
 <br>
-<a href=vvday7>Day 7 - to </a>
-<br>
-<a href=vvday8>Day 8 - to </a>
-<br>
-<a href=vvday9>Day 9 - to </a>
-<br>
-<a href=vvday10>Day 10 - to </a>
-<br>
-<a href=vvday11>Day 11 - to </a>
-<br>
-<a href=vvday12>Day 12 - to </a>
-<p>
--->
 <h3>You can read about my other trips <a href="/">on the main page of this site</a></h3>
     </div>
 </main>
