--- a/src/pages/valley2/vvday1.astro
+++ b/src/pages/valley2/vvday1.astro
@@ -26,24 +26,41 @@ Difficulty: medium
 <hr>
 <a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
 <hr>
+<a href="https://q42.me/trips/valley2/day1-capital.jpg"><img src="https://q42.me/trips/valley2/day1-capital-small.jpg"></a>
 <p>
-The train ride went smoothly and I debarked at dawn in Sacramento.  Downtown is still asleep.  Headed to get fueled up before riding, and found some very reasonably priced biscuits and gravy at a highly rated diner across from the state capital, and an overpriced coffee at an underrated corporate chain store.  Applied sunscreen and turned south, heading out of town.
+<i>Started off at the State Capitol building which was across the street from my pre-7am breakfast stop</i>
 <p>
-Headed out of town along more of the great bike path along the river that I so enjoyed last time I was in town, almost a year ago.  That part was great for more than 10 miles but I eventually ended up back on the road, where an inattentive driver almost drove over me before waving apologetically.  Hopefully that's the worst I encounter this trip.  No damage dune.
+The train ride from Portland went smoothly, though I slept poorly. I debarked at dawn in Sacramento.  Downtown is still asleep.  Headed to get fueled up before riding, and found some extremely reasonably priced biscuits and gravy at a highly rated diner across from the state capital - for 7$ I'll call a large portion a 5 star meal too - and then got an overpriced coffee at an overrated corporate coffee location.  While I was sipping, I applied sunscreen and turned south, heading out of town.
 <p>
-The route overall is pretty decent; for much of this week I'll follow the lower 2/3 of the <a href="https://ridewithgps.com/ambassador_routes/2086-great-central-valley-bicycle-route">Great Central Valley bicycle route</a> which I used the top third of for inspiration in <a href="https://foolishtravels.com/vsummary/">a tour back in January</a>.  Some of the landscape feels almost familiar from that tour.
+<a href="https://q42.me/trips/valley2/day1-bikeway.jpg"><img src="https://q42.me/trips/valley2/day1-bikeway-small.jpg"></a>
 <p>
-Sacramento sprawl carries on for many miles; I rode back into the city limits around mile 20 of my ride south from downtown!  I rode past some road closure signs as I headed on into the rural spots between towns, and here the agriculture and wetlands took back over.  As I rode through <a href="https://www.cosumnes.org/">The Cosumnes River Preserve</a> I did indeed have to route around a closed bridge, off the "official" route - but it was another low traffic road populated mostly by birds.
+I headed out of town along more of the great bike path along the river that I so enjoyed last time I was in town, almost a year ago.  That part was great for more than 10 miles but I eventually ended up back on the road, where an inattentive driver almost drove over me before waving apologetically.  Hopefully that's the worst I encounter this trip.  No damage dune.  (Spoiler alert:  That was about the worst of things for the whole journey, though there were some places where the roads were pretty busy, no individual action felt quite as dangerous as that one an hour into the long ride.
 <p>
-Just after I left the preserve (whose facilities were closed due to government shutdown), a road bike rider caught me and we chatted and rode together for a few miles, he slowing down to my speed and letting me draft off him a bit.  Not a lot of cyclists once I got out of Sacramento...
+<a href="https://q42.me/trips/valley2/day1-bikelane.jpg"><img src="https://q42.me/trips/valley2/day1-bikelane-small.jpg"></a>
 <p>
-Next up I ran into Will, who is doing a faith walk - 18 months across at least 31 states and leaving it in God's hands.  I guess it's going well, or anyway, Will was kind and friendly and we wished eachother safe travels and I carried on.  He warned me that my "Angel Number" might go up due to the encounter...
+<i>This was a highway, but the bike lane felt pretty safe.  Probably the best bike lane of my whole trip!  (This was not where the bad motorist interaction occurred, that was more like a suburban arterial)</i>
 <p>
-All day I was driving through fields of grapes (and also cows, olives, and a few fruit farms).  All of the grapes still hanging are either actively rotting or just on the verge, so I ate a few and they are universally the sweetest grapes I have ever had.  I guess fully ripe fresh grapes test better like just about all fresh veg?  Regardless, interesting to see that the olives aren't really started yet vs January when they are coming off the trees!
+This route overall is pretty great from my past experience (<i>...and your editor from the future has an unchanged opinion</i>); for much of this week I'll follow the lower 2/3 of the <a href="https://ridewithgps.com/ambassador_routes/2086-great-central-valley-bicycle-route">Great Central Valley bicycle route</a> which I used the top third of for inspiration in <a href="https://foolishtravels.com/vsummary/">a tour back in January</a>.  Relatedly, much of the landscape feels familiar from that tour in similar season and land use.
 <p>
-Stopped for lunch at a tasty taco stand in SomeSmallTown but kept on for Stockton for the evening. I had thought I might find a homestay through WarmShowers.org but that fell through so I got a cheap hotel and met Lori's father Larry for dinner at a Texas-themed steakhouse.  It was decent food and company but I didn't love the hour of driving to/from the place.  I'll probably turn down future offers that require a car ride mid-bike-tour, kinda feels bad to cover a day's work in a few minutes and then go back to riding...
+<a href="https://q42.me/trips/valley2/day1-closed.jpg"><img src="https://q42.me/trips/valley2/day1-closed-small.jpg"></a>
 <p>
-Apparently I forgot to pack shorts, so gonna try to get something done about that...
+Sacramento sprawl carries on for many miles! I rode <b>back into</b> the Sacramento city limits around mile 20 of my ride south from downtown!  I'd been in some pretty empty land for a minute but headed back through a populous stretch before really getting out of town.  I rode past some road closure signs as I headed on into the rural spots between towns, and here the agriculture and wetlands took back over.  Fortunately, nothing today was actually flooded.  However, as I rode through <a href="https://www.cosumnes.org/">The Cosumnes River Preserve</a> I did indeed have to route around a closed bridge, off the "official" route - but it was another low traffic road populated mostly by birds.
+<p>
+<a href="https://q42.me/trips/valley2/day1-mural.jpg"><img src="https://q42.me/trips/valley2/day1-mural-small.jpg"></a>
+<p>
+Just after I left the preserve (whose facilities were closed due to government shutdown, so I didn't get to use the bathroom there or check out the visitor center), a road bike rider caught up with me and we chatted and rode together for a few miles. He kindly slowed down to my speed and let me draft off him for a bit and we shouted a conversation at eachother while we did.  He turned off a few miles later.  Not a lot of cyclists in the countryside once I left Sacramento - for the rest of the trip!
+<p>
+Next up I ran into a hiker named Will, who is doing a "faith walk" - he's been walking for 18 months across at least 31 states and leaving his journey and accommodation in God's hands.  I guess it's going well, or anyway, Will seemed healthy and in good spirits, and was kind and friendly and we wished eachother safe travels and I carried on.  He warned me that my "Angel Number" might go up due to the encounter.  I don't believe like he does, but I've never turned down a good thought sent in my direction...
+<p>
+All day I was biking through fields of grapes (and also cows, olives, and a few citrus/almond farms).  All of the grapes still hanging are either actively rotting or just on the verge, so I ate a few and they are universally the sweetest grapes I have ever had.  I guess fully ripe fresh grapes test better like just about all fresh veg (e.g. tomatoes)?  Regardless, interesting to see that the olives aren't really started yet vs January when they are coming down off the trees!
+<p>
+<a href="https://q42.me/trips/valley2/day1-sadgrapes.jpg"><img src="https://q42.me/trips/valley2/day1-sadgrapes-small.jpg"></a>
+<p>
+<i>I ate only the still-round, non-moldy grapes, and only ones in clearly abandoned fields rather than working farms</i>
+<p>
+Stopped for lunch at a tasty taco stand in SomeSmallTown but kept on for Stockton for the evening. I had thought I might find a homestay for the night through WarmShowers.org, but that fell through. Instead, I got a cheap hotel, and met Lori's father Larry for dinner at a Texas-themed steakhouse.  He lives about a half hour from where I was staying. It was decent food and company but I didn't love the hour of driving to/from the place from where he picked me up.  I'll probably turn down future offers that require a car ride mid-bike-tour, kinda feels bad to cover a day's work in a few minutes and then have to motivate to go back to riding much more slowly.  Plus my trip was otherwise quite "green" - nothing but a train as far as non-human-powered vehicle travel.
+<p>
+Apparently, I forgot to pack shorts, so gonna try to get something done about that tomorrow!
 <p>
     </div>
 
