--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,13 +17,11 @@ import Layout from '../components/Layout.astro';
 <a href="https://q42.me/trips/valley/vday6.jpg"><img src=https://q42.me/trips/valley/vday6-best-small.jpg></a>
 <p>
 <hr>
-<b>
-In Nov 2025 I am riding from Sacramento to Los Angeles.  You can <a href="valley2">follow along here</a>
-</b>
+<b>In Nov 2025 I did a short tour from Sacramento to Bakersfield, California.  You can <a href="valley2">travel virtually along with me, here</a>.</b>
 <p>
 <b>In May 2025 I toured Slovenia.  You can <a href="slovenia">read about that here</a>.</b>
 <p>
-<b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can read about here</a></b>
+<b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can check out here</a>.</b>
 <p>
 <b><a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href="canada">read about that here.</a>  This was my biggest tour since my first in 2007 - see Texas to Alaska below - and has the most to read about.</b>
 <p>
