--- a/src/pages/valley2/vvday1.astro
+++ b/src/pages/valley2/vvday1.astro
@@ -34,7 +34,7 @@ The train ride from Portland went smoothly, though I slept poorly. I debarked at
 <p>
 <a href="https://q42.me/trips/valley2/day1-bikeway.jpg"><img src="https://q42.me/trips/valley2/day1-bikeway-small.jpg"></a>
 <p>
-I headed out of town along more of the great bike path along the river that I so enjoyed last time I was in town, almost a year ago.  That part was great for more than 10 miles but I eventually ended up back on the road, where an inattentive driver almost drove over me before waving apologetically.  Hopefully that's the worst I encounter this trip.  No damage dune.  (Spoiler alert:  That was about the worst of things for the whole journey, though there were some places where the roads were pretty busy, no individual action felt quite as dangerous as that one an hour into the long ride.
+I headed out of town along more of the great bike path along the river that I so enjoyed last time I was in town, almost a year ago.  That part was great for more than 10 miles but I eventually ended up back on the road, where an inattentive driver almost drove over me before waving apologetically.  Hopefully that's the worst I encounter this trip.  No damage done.  (Spoiler alert:  That was about the worst of things for the whole journey, though there were some places where the roads were pretty busy, no individual action felt quite as dangerous as that one an hour into the long ride.
 <p>
 <a href="https://q42.me/trips/valley2/day1-bikelane.jpg"><img src="https://q42.me/trips/valley2/day1-bikelane-small.jpg"></a>
 <p>
