now-with-embedded-RwGPS-map

--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -21,7 +21,7 @@ import Layout from '../components/Layout.astro';
 <br>
 <b>Difficulty: medium</b>
 <br>
-<b><a href="https://ridewithgps.com/collections/8152222">Link to full route in RidewithGPS</a></b>
+<iframe src="https://ridewithgps.com/embeds?type=event&eventId=434674&sampleGraph=true&defaultShowAll=true" style="width: 1px; min-width: 100%; height: 700px; border: none;" scrolling="no"></iframe>
 <br>
 <h3><a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Full photo gallery from this trip</a></h3>
 <br>
