--- a/src/pages/valley2/vvday2.astro
+++ b/src/pages/valley2/vvday2.astro
@@ -24,20 +24,33 @@ Difficulty: medium (easy-ish but long)
 <br>
 <a href="https://www.strava.com/activities/16379480629">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
+<a href="https://q42.me/trips/valley2/day2-stockton-sunset.jpg"><img src="https://q42.me/trips/valley2/day2-stockton-sunset-small.jpg">
 <p>
-Got some reasonable sleep on day 2 in Stockton (was waiting for a storm to blow through; it did).  Got up and packed kinda leisurely, but was still on the prowl for breakfast before 7am.  Hit up a don't-speak-English kinda tacqueria and got a pretty good breakfast burrito.  Gave a distraught lady outside the place my change though it was clear she wanted my breakfast (still in hand).  I probably should have given it to her and gone back for more but I was only feeling so generous.  Got checked out and "since my coffeemaker didn't work" the front desk gave me a free gatorade saving me a convenience store stop and so then I rolled out of town.
+Got some reasonable sleep on my second day in Stockton; I was waiting for a storm to blow through & it did.  Got up and packed kinda leisurely, but was still on the prowl for breakfast before 7am.  Hit up a don't-speak-English kinda tacqueria and got a pretty good breakfast burrito.  Gave a distraught lady outside the place my change though it was clear she wanted my breakfast (still in hand).  I probably should have given it to her and gone back for more but I was only feeling so generous.  Got checked out and "since my coffeemaker didn't work" the front desk gave me a free gatorade saving me a convenience store stop and so then I rolled out of town.  Pretty friendly service for the cheapest hotel in town!
 <p>
-I took Copperopolis road for about 10 miles and it was good.  Way better than the 4-lane freeway shoulder that was my other option!  Had snacks as I rolled through some small town, then went a couple miles out of the way before I left the last big town I would see today, to have lunch in a restaurant.  The bagel sandwich was great!
+<a href="https://q42.me/trips/valley2/day2-waypost.jpg"><img src="https://q42.me/trips/valley2/day2-waypost-small.jpg">
+<p>
+I put on my newly acquired shorts - $11 at JC Penney; malls sure are weird - and then I took Copperopolis road out of town for about 10 miles and it was good!  Since the route as designed didn't go through Stockton, I had to make up that part, and wasn't sure what kinda road conditions I'd find.  Also, I enjoyed saying "Copperopolis" in my head and may have composed silly songs about it, but you can't prove anything!  It was anyway way better than the 4-lane freeway shoulder that was my other option (which I'd previewed while Lori's dad drove me to dinner)!  Had snacks as I rolled through some small town, then went a couple miles out of the way before I left the last big town I would see today, to have lunch in the last restaurant google knew about on the edge of town;  the bagel sandwich was great!
+<p>
+<a href="https://q42.me/trips/valley2/day2-bikepath.jpg"><img src="https://q42.me/trips/valley2/day2-bikepath-small.jpg">
 <p>
 Modesto is, as far as I can tell, mostly riverside bike paths (that's about all I saw, hence my doubling back to get fed as the path runs clear to the end of town!).  Decent bike facilities in that town at least, and no real troubles to report on the road today.
 <p>
+<a href="https://q42.me/trips/valley2/day2-monument.jpg"><img src="https://q42.me/trips/valley2/day2-monument-small.jpg">
+<p>
+<i>Rolled through a cemetery at one point and took a lil break here</i>
+<p>
 Rolled into camp around 4pm and was greeted by a ranger and some cats.  Got a campsite paid for and didn't even have bags off my bike before a cat was rubbing my ankles.  This guy was fearless; all the others have kept varying distances from me, though some of those distances were feet, others were 100 feet.
+<p>
+<a href="https://q42.me/trips/valley2/day2-campground.jpg"><img src="https://q42.me/trips/valley2/day2-campground-small.jpg">
+<p>
+<i>Not pictured is the friendly cat;  these were hungry but skittish kittens who were very interested in my crumbs but not interested in being touched</i>
 <p>
 Ranger passed back through and hooked me up with change for a dollar, since there is nowhere anywhere nearby to try to get my own change (campground/park are just across the river from town.  Road to town is pretty indirect, 5mi+ to work back around and cross the river).  Thus did I get a great and necessary shower - the road grime was pretty intense today!
 <p>
-Tomorrow I'll have a really long ride to fresno, or maybe I'll call it off at 65mi in Merced and stay there.  TBD!
+Tomorrow I'll have a really long ride to Fresno, or maybe I'll call it off at 65mi in Merced and stay there?  TBD!
+<p>
+<a href="https://q42.me/trips/valley2/day2-kindness.jpg"><img src="https://q42.me/trips/valley2/day2-kindness-small.jpg">
 <p>
     </div>
 
