--- a/src/pages/valley2/vvday3.astro
+++ b/src/pages/valley2/vvday3.astro
@@ -23,23 +23,39 @@ Difficulty: hard (length; terrain and weather were great!)
 <br>
 <a href="https://www.strava.com/activities/16389215714">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-The sun was with me all day; I have sunburned thighs. These emergency-shopped shorts are a couple inches shorter than my usual, and I rarely put sunscreen on my legs.  Guess tomorrow I'll remember it!
+<a href="https://q42.me/trips/valley2/day3-halfnhalf.jpg"><img src="https://q42.me/trips/valley2/day3-halfnhalf-small.jpg"></a>
 <p>
-Said goodbye to the feral cat friends after having some protein-powder-enhanced oatmeal for breakfast, and retraced my steps into the campground for several miles before I started making new progress southeast - fortunately the same direction the wind was blowing (and fortunately this remained the case all day long)
+<i>Stopped to take a picture of this flag and a fellow came out of the house and smiled and waved and I gave him a big smile and thumbs up.  As I was touring, our country is attempting to deport as many foreigners as possible, much to my chagrin.</i>
 <p>
-Still, got some good trails in Merced which is always a pleasure after miles and miles of straight ol Avenue 26 and Road 19.
-Rolled through Merced in time for lunch - and then had second lunch in Madera.  This ended up being the longest single-day fully loaded ride I've signed up for in memory.  I could have stopped at 2/3 - Madera is a town with many hotels that was my planned spot: check-in, consider-the-time-and-energy, and then make the call.  So I stopped for a late lunch and the milkshake power convinced me to carry on. Today, my butt kinda hates me, but the legs are fine and I'm taking a day mostly off the bike, so hopefully the rest will be healing.  I feel like my monthly 200k's have gotten me in the shape that this was even possible and not ill-advised...
+<a href="https://q42.me/trips/valley2/day3-citrus.jpg"><img src="https://q42.me/trips/valley2/day3-citrus-small.jpg"></a>
 <p>
-All day long, I made good time on mostly good to great roads.  Only about half of the roads out of the campground and into Fresno were planned by the route creator, the rest I built off of heatmaps and hope with RidewithGPS and things were pretty fine.  Probably about 10 might-have-preferred-better miles but really only a mile or two of yikes.  And half of that was in Fresno where they like to end the bike lane a block or two before the intersection and not resume it until a block or two after.  Only on busy streets, of course.  But it's an unwelcome pinch point...
+The sun was with me all day; I have sunburned thighs. These emergency-shopped shorts are a couple inches shorter than my usual, and I rarely put sunscreen on my legs.  Guess tomorrow I'll remember to do so?  (<i>Spoiler:  I did not remember, but there was less sun and less miles for the rest of the days...</i>)
 <p>
-Today's road closure was about 50 feet long and I gambled and won as I could walk around it and there was no active work in progress.  WHEW.
+Said goodbye to my feral cat friends after having some protein-powder-enhanced oatmeal for breakfast, and retraced my steps back from the campground for several miles before I started making new progress southeast - fortunately the same direction the wind was blowing.  Fortunately the wind stayed mostly with me all day and for the rest of the trip until Bakersfield!)
 <p>
-Got to bike into Fresno on some dirt trails right at the golden hour - sunset underbiking for the win!  Pulled into my hostel around 6 but it was almost fully dark already...daylight savings has really taken away some easier time on the road!
+<a href="https://q42.me/trips/valley2/day3-bikepath.jpg"><img src="https://q42.me/trips/valley2/day3-bikepath-small.jpg"></a>
 <p>
-Took a day to recover here - doing some laundry, art museum and library visit and firming up next few days' plans while I eat my way across town, or at least the little district I'm staying in which is cute and trendy.
+Found some good trails in Merced - which is always a pleasure after miles and miles and miles of straight ol rural Avenue 26 and Road 19. As it happened, I rolled through Merced in time for lunch - and then had second lunch in Madera.  Couldn't really put all the food in but tried hard to stay fueled up, since this ended up being the longest single-day fully loaded ride I've signed up for in memory.  I could have stopped at around 2/3 of the way; Madera is a town with many hotels that was my planned spot to check in with my body, consider-the-time-and-remaining-energy, and then make the call.  So I stopped for a late lunch and the POWER OF THE MILKSHAKE convinced me to carry on. Today, my butt kinda hates me, but the legs are fine and I'm taking a day mostly off the bike, so hopefully the rest will be healing.  I feel like my monthly 200k's have gotten me in the shape that this was even possible and not ill-advised!  Good job, past Chris!
+<p>
+<a href="https://q42.me/trips/valley2/day3-lies.jpg"><img src="https://q42.me/trips/valley2/day3-lies-small.jpg"></a>
+<p>
+<i>There was no flooding anywhere while I rode.  But there were hundreds of signs like this which ratcheted up the tension a bit after I took a 10 mile or so detour on my last California tour due to unexpected flooding</i>
+<p>
+All day long, I made good time on mostly good to great roads.  Only about half of the roads out of the campground and into Fresno were planned by the route creator; the rest I built off of heatmaps and hope using <a href="https://www.ridewithgps.com">RidewithGPS</a>, and things were pretty fine.  Probably about 10 might-have-preferred-better miles - some of which had no easy alternative - but really only a mile or two of actual "yikes".  And half of <b>that</b> was after I arrived in Fresno - where they like to end the bike lane a block or two before the intersection and not resume it until a block or two after!  Only on busy streets, of course.  But, it's an unwelcome pinch point, especially at mile 99 in a long day.
+<p>
+<a href="https://q42.me/trips/valley2/day3-closed.jpg"><img src="https://q42.me/trips/valley2/day3-closed-small.jpg"></a>
+<p>
+Today's road closure failed to impress - it was about 50 feet long.  I gambled with a couple miles ride and fingers crossed to "wait and see", and won!  Fortunately, I could walk around the closure and there was no active work in progress.  WHEW.  The detour around seemed confusing at best, and probably fairly long and trafficky.
+<p>
+<a href="https://q42.me/trips/valley2/day3-underbike.jpg"><img src="https://q42.me/trips/valley2/day3-underbike-small.jpg"></a>
+<a href="https://q42.me/trips/valley2/day3-sunset.jpg"><img src="https://q42.me/trips/valley2/day3-sunset-small.jpg"></a>
+<p>
+Got to bike into the outskirts of Fresno on some dirt trails right at the golden hour - sunset underbiking for the win!  Pulled into my hostel around 6 but it was almost fully dark already...daylight savings has really taken away some easier time on the road!  Found some highly rated Tex-Mex and settled in with a FLIGHT OF MICHELADAS.  Thirsty man drinks lots; film at 11.
+<p>
+<a href="https://q42.me/trips/valley2/day3-micheladas.jpg"><img src="https://q42.me/trips/valley2/day3-micheladas-small.jpg"></a>
+<p>
+Took a day to recover here - doing some laundry, art museum and library visit and firming up next few days' plans while I eat my way across town, or at least the little district I'm staying in (the Tower District), which is cute and trendy.
 <p>
 Tomorrow, south again!
 <p>
